doc: added links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href = "./style.css/">
+    <link rel = "stylesheet" href = "./styles.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Is Your Birthday Lucky? </title>
 </head>
 <body>
@@ -18,8 +19,34 @@
         <label for = "lucky-number"> Lucky Number:</label>
         <input type ="number" id = "lucky-number">
         <button id = "check-number">Check</button>
-        <textarea id = "output-box" disabled></textarea>
+        <p id = "output-box" disabled></p>
+        <small id="privacy-note">NOTE : We do not store any data.</small>
     </div>
+    <footer class="footer">
+        <div class = "footer-header">See me at these platforms-</div>
+        <ul class="list-non-bullet">
+            <li class = "list-item-inline">
+                <a class = "link" href = "https://github.com/Chaudhary-sonika">
+                    <i class="fa fa-github" style = "font-size: 25px;"></i>
+                </a>
+            </li>
+            <li class = "list-item-inline">
+                <a class = "link" href = "https://twitter.com/IAm_Sonika">
+                    <i class="fa fa-twitter" style = "font-size: 25px;"></i>
+                </a>
+            </li>
+            <li class = "list-item-inline">
+                <a class = "link" href = "https://www.linkedin.com/in/sonika-chaudhary-551b28251/">
+                    <i class="fa fa-linkedin" style = "font-size: 25px;"></i>
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="mailto:sonikachaudhary.ab@gmail.com">
+                    <i class="fa fa-envelope " style="font-size:25px"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
     
 </body>
 <script src = "./app.js" ></script>
