--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     </div>
     
     <div class = "container">
-        <label for = "date-of-birth"> Date of Birth:</label>
-        <input type ="date" id = "date-of-birth">
-        <label for = "lucky-number"> Lucky Number:</label>
-        <input type ="number" id = "lucky-number">
+        <label for = "birth-date"> Date of Birth:</label>
+        <input type ="date" id = "birth-date">
+        <label for = "lucky"> Lucky Number:</label>
+        <input type ="number" id = "lucky">
         <button id = "check-number">Check</button>
         <p id = "output-box" disabled></p>
         <small id="privacy-note">NOTE : We do not store any data.</small>
